# rurikawa

./: .angulardoc.json  .dockerignore  .gitignore  .gitmodules  Caddyfile  Cargo.toml  LICENSE  README.md  coordinator.Dockerfile  dev.docker-compose.yml  example.redis.conf  omnisharp.json  rurikawa.sln
.github/workflows/: build.yml  codeql-analysis.yml  release.yml  test.yml
coordinator/: .dockerignore  .gitignore  Config.cs  Dockerfile  Karenia.Rurikawa.Coordinator.csproj  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.dev.json  appsettings.json
coordinator-tests/: .gitignore  Karenia.Rurikawa.Coordinator.Tests.csproj
coordinator-tests/Mock/: Database.cs
coordinator-tests/Services/: AccountServiceTest.cs
coordinator/Controllers/: AccountController.cs  AdminController.cs  AnnouncementController.cs  DashboardController.cs  FileController.cs  JobController.cs  JudgerApiController.cs  ProfileController.cs  StatusController.cs  TestController.cs  WeatherForecastController.cs
coordinator/Controllers/Admin/: AdminController.cs  AdminJudgerController.cs  AdminTestController.cs
coordinator/Helpers/: AuthHelper.cs  DisposableSemaphore.cs  DrainStream.cs  FlowSnakeId.cs  RefCountedObservable.cs  StreamAsyncAdaptor.cs  WebsocketWrapper.cs
coordinator/Migrations/: 20200826150844_init.Designer.cs  20200826150844_init.cs  20200827074224_init.Designer.cs  20200827074224_init.cs  20200828090351_add-identity-types.Designer.cs  20200828090351_add-identity-types.cs  20200904111358_init.Designer.cs  20200904111358_init.cs  20200915141458_UpdateSchema.Designer.cs  20200915141458_UpdateSchema.cs  20200927040726_updateTokensAndJobs.Designer.cs  20200927040726_updateTokensAndJobs.cs  20200930025150_AddStartAndStopTimes.Designer.cs  20200930025150_AddStartAndStopTimes.cs  20201005123114_AddJobBuildOutput.Designer.cs  20201005123114_AddJobBuildOutput.cs  20201026070233_AllowFaillibleTest.Designer.cs  20201026070233_AllowFaillibleTest.cs  20210219081534_AddJudgerScoring.Designer.cs  20210219081534_AddJudgerScoring.cs  20210306092638_AddDispatching.Designer.cs  20210306092638_AddDispatching.cs  20210530023101_AddAccountAndProfileView.cs  20210530024038_AddAccountAndProfileView2.Designer.cs  RurikawaDbModelSnapshot.cs
coordinator/Model/: Account.cs  Announcement.cs  DB.cs  Err.cs  Identity.cs  Judger.cs  JudgerMessage.cs  TestSuite.cs  WsApiMessage.cs
coordinator/Properties/: launchSettings.json
coordinator/Services/: AccountService.cs  CacheService.cs  DbService.cs  FileStorageService.cs  FrontendUpdateService.cs  IdentityService.cs  JudgerCoordinatorService.cs  JudgerService.cs  ProfileService.cs
docs/: readme.md
docs/dev-manual/: diff.md  protocol.md  special-judger.md
docs/manual/: results.md  submit.md
judger/: Cargo.toml  Dockerfile
judger/src/: client.rs  config.rs  judge.rs  lib.rs  main.rs  opt.rs  prelude.rs  tester.rs  util.rs
judger/src/client/: config.rs  err.rs  mod.rs  model.rs  sink.rs
judger/src/fs/: mod.rs  net.rs
judger/src/prelude/: cancel_token.rs  flowsnake.rs
judger/src/runner/: exec.rs  image.rs  mod.rs  model.rs  util.rs  volume.rs
judger/src/test/: mod.rs  runner_image.rs  runner_tests.rs  util.rs
judger/src/tester/: diff.rs  exec.rs  lowering.rs  mod.rs  model.rs  runner.rs  runner_plan.rs  spj.rs  util.rs  utils.rs
judger/src/tester/exec/: mod.rs  test_suite.rs  tests.rs
judger/src/tester/runner/: image.rs  mod.rs  model.rs
judger/src/util/: async_teardown.rs  deserialize.rs  mod.rs  names.rs  path_security.rs  string_or_struct.rs  tar.rs
web/: .gitignore  .postcssrc.js  Dockerfile  README.md  angular.json  karma.conf.js  package.json  postcss.config.js  rgsed.py  tsconfig.json  tslint.json  webpack.config.js
web/e2e/src/: app.e2e-spec.ts
web/src/: index.html  main.ts  styles.less  styles.styl
web/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
web/src/assets/: site.webmanifest
web/src/components/admin-components/: admin-components.module.ts
web/src/components/admin-components/dashboard-item/: dashboard-item.component.html  dashboard-item.component.less  dashboard-item.component.spec.ts  dashboard-item.component.styl  dashboard-item.component.ts
web/src/components/admin-components/user-item/: user-item.component.html  user-item.component.less  user-item.component.spec.ts  user-item.component.ts
web/src/components/base-components/: base-components.module.ts
web/src/components/base-components/back-btn/: back-btn.component.html  back-btn.component.spec.ts  back-btn.component.ts
web/src/components/base-components/checkbox/: checkbox.component.html  checkbox.component.less  (+1 more)
web/src/components/item-components/: item-components.module.ts
web/src/environments/: endpoints.ts  environment.prod.ts  environment.ts
web/src/models/: account.ts  errors.ts  flowsnake.ts  job-items.ts  server-types.ts  ws-types.ts
web/src/services/: account_service.ts  admin_service.ts  api_service.ts  dark_mode_watcher.ts  judger_status_service.ts  navbar_service.ts  test_suite_cacher.ts  title_service.ts
web/src/styles/: breakpoint.less  breakpoint.styl  column.less  common.less  common.styl  container.less  container.styl  markdown.less  markdown.styl  prism-ghcolors.css  prism-ghcolors.less  prism-ghcolors.styl  vditor.less  vditor.styl
web/src/util/: brief-calc.ts
web/src/views/admin/: admin.module.ts
web/src/views/default/: default.module.ts
(+144 files in other folders)
