[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>", "Rami3L Li <rami3l@>"]
edition = "2018"
name = "rurikawa-judger"
version = "0.2.0-beta.4"

[[bin]]
name = "rurikawa"
path = "src/main.rs"

[profile.release]
debug = 0
lto = true
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "*"
arc-swap = "1.0.0"
async-compat = "0.1"
async-pipe = "0.1"
async-tar = "0.3.0"
async-trait = "0.1.42"
bollard = "0.10"
broadcaster = {version = "1.0.0", features = ["default-channels"]}
bytes = "0.5"
chrono = "0.4.19"
clap = "3.0.0-beta.1"
ctrlc = "3.1.7"
dashmap = "3.11.10"
difference = "2.0.0"
dirs = "3.0.1"
err-derive = "*"
fern = "0.6.0"
futures = "0.3.8"
http = "*"
hyper = {version = "0.14", features = ["stream"]}
libc = "0.2.81"
log = "*"
names = "0.11.0"
once_cell = "1.5.2"
path-absolutize = "3.0.6"
path-slash = "0.1.3"
rand = "0.7.3"
regex = "1.4.2"
reqwest = {version = "0.11", features = ["json", "stream"]}
rquickjs = {version = "0.1.1", features = ["bindgen", "parallel", "futures", "macro"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
shell-words = "1"
tar = "0.4.30"
tokio = {version = "1", features = [
  "full",
]}
tokio-stream = {version = "0.1", features = ["fs"]}
tokio-tungstenite = {version = "0.13.0", features = ["tls"]}
tokio-util = {version = "0.6", features = ["codec", "compat"]}
toml = "0.5.7"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"

[dev-dependencies]
pretty_assertions = "0.6.1"
tokio-test = "0.3.0"
