[package]
authors = [
    "Rynco Maekawa <lynzrand@outlook.com>",
    "rami3l <rami3l@outlook.com>",
]
edition = "2018"
name = "rurikawa-judger"
version = "0.3.3"

[[bin]]
name = "rurikawa"
path = "src/main.rs"

[profile.release]
debug = 0
lto = true
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "*"
arc-swap = "1.0.0"
async-compat = "0.2"
async-pipe = "0.1"
async-tar = "0.3.0"
async-trait = "0.1.42"
bollard = "0.10"
broadcaster = { version = "1.0.0", features = ["default-channels"] }
bytes = "1"
chrono = "0.4.19"
clap = "3.0.0-beta.1"
ctrlc = "3.1.7"
dashmap = "4"
difference = "2.0.0"
dirs = "3.0.1"
drop_bomb = "0.1.5"
err-derive = "*"
fern = "0.6.0"
futures = "0.3.8"
http = "*"
hyper = { version = "0.14", features = ["stream"] }
itertools = "0.10.0"
ignore = "0.4"
log = "*"
names = "0.11.0"
nix = "0.20"
once_cell = "1.5.2"
path-absolutize = "3.0.6"
path-slash = "0.1.3"
rand = "0.8"
regex = "1.4.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
rquickjs = { version = "0.1.1", features = ["bindgen", "parallel", "futures", "macro"] }
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = "1.0.60"
shell-words = "1"
tar = "0.4.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
toml = "0.5.7"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
respector = "0.1.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
tokio-test = "0.4"
