[package]
authors = [
    "Rynco Maekawa <lynzrand@outlook.com>",
    "Rami3L Li <rami3l@outlook.com>",
]
edition = "2018"
name = "rurikawa-judger"
version = "0.5.0-alpha.1"

[[bin]]
name = "rurikawa"
path = "src/main.rs"

[profile.release]
debug = 0
# lto = true
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
arc-swap = "1.0.0"
async-compat = "0.2"
async-pipe = "0.1"
async-trait = "0.1.42"
bollard = "0.11"
bytes = "1"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
ctrlc = "3.1.7"
dashmap = "4"
derive_builder = "0.10.2"
difference = "2.0.0"
dirs = "4"
drop_bomb = "0.1.5"
err-derive = "*"
fern = "0.6.0"
futures = "0.3.8"
http = "*"
hyper = { version = "0.14", features = ["stream"] }
itertools = "0.10.0"
ignore = "0.4"
log = "*"
names = { version = "0.12.0", default-features = false }
nix = "0.23"
once_cell = "1.5.2"
path-absolutize = "3.0.6"
path-slash = "0.1.3"
rand = "0.8"
regex = "1.4.2"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
rquickjs = { version = "0.1.1", features = [
    "bindgen",
    "parallel",
    "futures",
    "macro",
] }
scopeguard = "1.1"
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = "1.0.60"
tokio = { version = "1", features = ["full"] }
tokio-tar = "0.3.0"
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
toml = "0.5.7"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
respector = "0.1.1"

[dev-dependencies]
pretty_assertions = "1"
shellexpand = "2.1"
shell-words = "1"
test-env-log = { version = "0.2", features = [
    "trace",
], default-features = false }
